--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-url = jdbc:mysql://jdbcStation/TrainStation?useSSL=false
+url = jdbc:mysql://jdbcStation
 login = root
 password = vitmantekoR_2408
 driver = com.mysql.jdbc.Driver
