--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-url = jdbc:mysql://jdbcStation
+url = jdbc:mysql://localhost:3306
 login = root
 password = vitmantekoR_2408
-driver = com.mysql.jdbc.Driver
+driver = com.mysql.cj.jdbc.Driver
